--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
 <h2>Hello World!</h2>
+<%= link_to 'Inscription', new_user_registration_path %>
+<%= link_to 'Identification', new_user_session_path %>
+<%= link_to 'Déconnexion', destroy_user_session_path, method: :delete %>
