--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+  width: 100%;
+  margin: 0;
+}
+
+.landing_message {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 20px;
+}
+
+.landing_submessage {
+  text-align: center;
+  font-size: 16px;
+}
+
+.landing_login_list {
+  text-align: center;
+  padding: 0;
+  list-style-type: none;
+}
