--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,13 @@
-<h2>Hello World!</h2>
+<% if current_user %>
 
-<%= link_to 'Inscription', new_user_registration_path %>
-<%= link_to 'Identification', new_user_session_path %>
-<%= link_to 'Déconnexion', destroy_user_session_path, method: :delete %>
+  <h2>Hello <%= current_user.first_name %>!</h2><br>
+  <%= link_to 'Déconnexion', destroy_user_session_path, method: :delete %><br>
+  <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>
 
-<%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>  
+<% else %>
+
+  <h2>Hello World!</h2>
+  <%= link_to 'Inscription', new_user_registration_path %>
+  <%= link_to 'Identification', new_user_session_path %>
+
+<% end %>
