--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,3 +35,21 @@ body {
   padding: 0;
   list-style-type: none;
 }
+
+form {
+  width: 70%;
+}
+
+.signup_title {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.signup_form {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+.signup_form .field {
+  width: 300px;
+}
