--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <% if current_user %>
 
   <h2>Hello <%= current_user.first_name %>!</h2><br>
+  <%= link_to 'Create a set' %><br>
   <%= link_to 'Déconnexion', destroy_user_session_path, method: :delete %><br>
   <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>
 
