--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>User</th>
-      <th>Photo</th>
+      <th>Photos</th>
       <th>Name</th>
       <th>Description</th>
       <th>Category</th>
@@ -24,7 +24,7 @@
     <% @places.each do |place| %>
       <tr>
         <td><%= place.user %></td>
-        <td><%= place.photo %></td>
+        <td><%= place.photos %></td>
         <td><%= place.name %></td>
         <td><%= place.description %></td>
         <td><%= place.category %></td>
