--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -35,7 +35,7 @@
 
   <div class="field">
     <%= form.label :category %>
-    <%= form.text_field :category, id: :place_category %>
+    <%= form.select(:category, options_for_select(['House', 'Appartment', 'Castle', 'Cottage', 'Other' ])) %>
   </div>
 
   <div class="field">
