--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -7,6 +7,8 @@
     <tr>
       <th>User</th>
       <th>Place</th>
+      <th>Price</th>
+      <th>Total</th>
       <th>Start</th>
       <th>End</th>
       <th colspan="3"></th>
@@ -18,6 +20,8 @@
       <tr>
         <td><%= booking.user %></td>
         <td><%= booking.place %></td>
+        <td><%= booking.price %></td>
+        <td><%= booking.total %></td>
         <td><%= booking.start_time %></td>
         <td><%= booking.end_time %></td>
       </tr>
