--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -36,18 +36,18 @@
 </p>
 
 <p>
-  <strong>City:</strong>
-  <%= @place.city %>
-</p>
-
-<p>
   <strong>Ambience:</strong>
   <%= @place.ambience %>
 </p>
 
 <p>
-  <strong>Area:</strong>
-  <%= @place.area %>
+  <strong>Latitude:</strong>
+  <%= @place.latitude %>
+</p>
+
+<p>
+  <strong>Longitude:</strong>
+  <%= @place.longitude %>
 </p>
 
 <p>
