--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,36 @@
   </head>
 
   <body>
+    <% if current_user %>
+    <header>
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">rent a set</a>
+          </div>
+          <ul class="nav justify-content-end">
+
+              <li class="nav-item">
+                <p class="nav-user-welcome-msg">Hey <%= current_user.first_name %> !</p>
+              </li>
+              <li class="nav-item">
+                <div class="dropdown">
+                  <a class="nav-link dropbtn" href="#">
+                      <%= image_tag avatar_url(current_user), class: "img-circle avatar-small" %>
+                  </a>
+                  <div class="dropdown-content">
+                    <a href="#">Profile</a>
+                    <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+                  </div>
+                </div>
+
+              </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <% else %>
     <header>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
@@ -23,12 +53,15 @@
                 <a class="nav-link" href="#">Sets</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <%= link_to 'Login', new_user_session_path, class: 'nav-link' %>
               </li>
           </ul>
         </div>
       </nav>
     </header>
+    <% end %>
+
+
     <%= yield %>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
