--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
       <div class="col-lg-8 mx-auto">
         <p class="text-faded mb-5">Start looking threw our fabulous selection of beautiful and unique places all around the world. You can even put up your own special place for rent by creating a set.</p>
         <a class="btn btn-primary btn-xl js-scroll-trigger" href="#">Discover</a>
-        <%= link_to 'Create a set', new_set_path, class:"btn btn-primary btn-xl js-scroll-trigger" %>
+        <%= link_to 'Create a set', new_place_path, class:"btn btn-primary btn-xl js-scroll-trigger" %>
 
       </div>
     </div>
