--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,43 +1,50 @@
-<div class="signup_form">
-  <h2 class="signup_title">Sign up</h2>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+<div class="container">
+  <div class="row center-align">
+    <div class="col-6">
+      <div class="signup_form">
+        <h2 class="signup_title">Sign up</h2>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
 
-  <div class="application_field field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <div class="application_field field">
+          <%= f.label :email %><br />
+        </div>
+        <%= f.email_field :email, autofocus: true, :class => 'form-control' %>
+
+        <div class="application_field field">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, :class => 'form-control'  %>
+        </div>
+
+        <div class="application_field field">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, :class => 'form-control'  %>
+        </div>
+
+        <div class="application_field field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off", :class => 'form-control'  %>
+        </div>
+
+        <div class="application_field field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control'  %>
+        </div>
+
+        <div class="form-group">
+          <%= f.file_field :avatar %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Sign up", :class => 'btn btn-primary' %>
+        </div>
+        <% end %>
+
+        <%= render "devise/shared/links" %>
+      </div>
+    </div>
   </div>
-
-  <div class="application_field field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name %>
-  </div>
-
-  <div class="application_field field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name %>
-  </div>
-
-  <div class="application_field field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="application_field field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="form-group">
-    <%= f.file_field :avatar %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
