--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -47,11 +47,11 @@
         <div class="row no-gutters popup-gallery">
           <div class="col-lg-4 col-sm-6">
             <a class="category-box" href="">
-              <%=image_tag("app1.jpg", class: "img_preview") %>
+              <%=image_tag("house0.jpg", class: "img_preview") %>
               <div class="category-box-caption">
                 <div class="category-box-caption-content">
                   <div class="project-category text-faded">
-                    Apartments
+                    Houses
                   </div>
                 </div>
               </div>
@@ -59,11 +59,11 @@
           </div>
           <div class="col-lg-4 col-sm-6">
             <a class="category-box" href="">
-              <%=image_tag("house0.jpg", class: "img_preview") %>
+              <%=image_tag("app1.jpg", class: "img_preview") %>
               <div class="category-box-caption">
                 <div class="category-box-caption-content">
                   <div class="project-category text-faded">
-                    Houses
+                    Apartments
                   </div>
                 </div>
               </div>
@@ -87,7 +87,7 @@
               <div class="category-box-caption">
                 <div class="category-box-caption-content">
                   <div class="project-category text-faded">
-                    Manors
+                    Mansions
                   </div>
                 </div>
               </div>
