fix missing char

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -290,6 +290,7 @@ input#user_password.form-control {
 
 .center-align {
   justify-content: center;
+}
 
 .category-box .category-box-caption .category-box-caption-content .project-category,
      .category-box .category-box-caption .category-box-caption-content .project-name {
