--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
  */
 
 body {
-  background-color: #F1F1F1;
+  /*background-color: #F1F1F1;*/
   width: 100%;
   margin: 0;
 }
@@ -166,7 +166,7 @@ input#user_password.form-control {
 
 @media (min-width: 992px) {
   header.masthead {
-    height: calc(100vh - 60px);
+    height: calc(100vh - 70px);
     min-height: 650px;
     padding-top: 0;
     padding-bottom: 0;
