--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,84 +1,102 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
+<div class="container-fluid">
+  <div class="row  justify-content-center">
+    <div class="col-8">
+      <div class="carousel slide Carousel-big" id="carousel" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <% @place.photos.each_with_index do |pic, i| %>
+            <% if i == 0 %>
+              <li data-target="#carousel" data-slide-to="<%= i %>" class="active"></li>
+            <% else %>
+              <li data-target="#carousel" data-slide-to="<%= i %>"></li>
+            <% end %>
+          <% end %>
+        </ol>
+        <div class="carousel-inner">
+          <% @place.photos.each_with_index do |pic, i| %>
+            <% if i == 0 %>
+              <div class="carousel-item active">
+                <%= image_tag pic.image.url(:high), class: 'w-100' %>
+              </div>
+            <% else %>
+              <div class="carousel-item">
+                <%= image_tag pic.image.url(:high), class: 'w-100' %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+        <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-8">
+      <p>
+        <strong>Name:</strong>
+        <%= @place.name %>
+      </p>
 
+      <p>
+        <strong>Description:</strong>
+        <%= @place.description %>
+      </p>
+      <p>
+        <strong>Tags:</strong>
+        <% @place.tags.each do |tag| %>
+          <%= tag.name %>
+        <% end %>
+      </p>
+      <p>
+        <strong>Category:</strong>
+        <%= @place.category %>
+      </p>
+
+      <p>
+        <strong>Address:</strong>
+        <%= @place.address %>
+      </p>
+
+      <p>
+        <strong>Area:</strong>
+        <%= @place.area %>
+      </p>
+
+      <p>
+        <strong>Latitude:</strong>
+        <%= @place.latitude %>
+      </p>
+
+      <p>
+        <strong>Longitude:</strong>
+        <%= @place.longitude %>
+      </p>
+
+      <p>
+        <strong>Exposure:</strong>
+        <%= @place.exposure %>
+      </p>
+
+      <p>
+        <strong>Price:</strong>
+        <%= @place.price %>
+      </p>
     </div>
   </div>
 </div>
 
 <% if flash[:notice] %>
-  <div id="notice"><%= flash[:notice] %></div>
+<div id="notice"><%= flash[:notice] %></div>
 <% end %>
 <% if flash[:alert] %>
-  <div id="alert"><%= flash[:alert] %></div>
+<div id="alert"><%= flash[:alert] %></div>
 <% end %>
 
-<p>
-  <strong>User:</strong>
-  <%= @place.user %>
-</p>
-
-<p>
-  <strong>Photo:</strong>
-  <% @place.photos.each do |pic| %>
-    <%= image_tag pic.image.url(:high) %>
-  <% end %>
-</p>
-
-<p>
-  <strong>Tags:</strong>
-</p>
-
-<p>
-  <% @place.tags.each do |tag| %>
-    <%= tag.name %>
-  <% end %>
-</p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @place.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @place.description %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @place.category %>
-</p>
-
-<p>
-  <strong>Address:</strong>
-  <%= @place.address %>
-</p>
-
-<p>
-  <strong>Area:</strong>
-  <%= @place.area %>
-</p>
-
-<p>
-  <strong>Latitude:</strong>
-  <%= @place.latitude %>
-</p>
-
-<p>
-  <strong>Longitude:</strong>
-  <%= @place.longitude %>
-</p>
-
-<p>
-  <strong>Exposure:</strong>
-  <%= @place.exposure %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @place.price %>
-</p>
-
-<%= link_to 'Edit', edit_place_path(@place) %> |
+<%= link_to 'Edit', edit_place_path(@place) %>
+|
 <%= link_to 'Back', places_path %>
